# internal/application/handlers/http/dto/responses.go
@@ -1,15 +1,0 @@
-package dto
-
-type RegisterResponse struct {
-	User User `json:"user"`
-}
-
-type LoginResponse struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
-}
-
-type RefreshResponse struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
-}
