# internal/presentation/http/user/dto/requests/register.go
@@ -1,0 +1,5 @@
+package http_user_requests
+
+type RegisterRequest struct {
+	Email string `json:"email"`
+}
