# internal/presentation/http/user/dto/responses/refresh.go
@@ -1,0 +1,6 @@
+package http_user_responses
+
+type RefreshResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
