# internal/presentation/http/user/dto/responses/register.go
@@ -1,0 +1,7 @@
+package http_user_responses
+
+import http_user_structs "auth/internal/presentation/http/user/dto/structs"
+
+type RegisterResponse struct {
+	User http_user_structs.User `json:"user"`
+}
